internal/mygo/parser/parser.output

state 0
	$accept: .file $end 
	opt_package: .    (3)

	PACKAGE  shift 4
	.  reduce 3 (src line 82)

	file  goto 1
	program  goto 2
	opt_package  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  program.    (1)

	.  reduce 1 (src line 66)


state 3
	program:  opt_package.opt_newlines decl_list opt_newlines 
	opt_newlines: .    (5)

	.  reduce 5 (src line 92)

	opt_newlines  goto 5

state 4
	opt_package:  PACKAGE.IDENT 

	IDENT  shift 6
	.  error


5: shift/reduce conflict (shift 8(0), red'n 7(0)) on NEWLINE
state 5
	program:  opt_package opt_newlines.decl_list opt_newlines 
	opt_newlines:  opt_newlines.NEWLINE 
	decl_list: .    (7)

	NEWLINE  shift 8
	.  reduce 7 (src line 97)

	decl_list  goto 7

state 6
	opt_package:  PACKAGE IDENT.    (4)

	.  reduce 4 (src line 84)


state 7
	program:  opt_package opt_newlines decl_list.opt_newlines 
	decl_list:  decl_list.opt_newlines decl 
	opt_newlines: .    (5)

	.  reduce 5 (src line 92)

	opt_newlines  goto 9

state 8
	opt_newlines:  opt_newlines NEWLINE.    (6)

	.  reduce 6 (src line 94)


state 9
	program:  opt_package opt_newlines decl_list opt_newlines.    (2)
	opt_newlines:  opt_newlines.NEWLINE 
	decl_list:  decl_list opt_newlines.decl 

	IMPORT  shift 19
	ENUM  shift 20
	STRUCT  shift 21
	INTERFACE  shift 22
	IMPL  shift 23
	FUNC  shift 24
	LET  shift 25
	VAR  shift 26
	NEWLINE  shift 8
	.  reduce 2 (src line 78)

	decl  goto 10
	import_decl  goto 11
	enum_decl  goto 12
	struct_decl  goto 13
	interface_decl  goto 14
	impl_decl  goto 15
	func_decl  goto 16
	let_decl  goto 17
	var_decl  goto 18

state 10
	decl_list:  decl_list opt_newlines decl.    (8)

	.  reduce 8 (src line 99)


state 11
	decl:  import_decl.    (9)

	.  reduce 9 (src line 102)


state 12
	decl:  enum_decl.    (10)

	.  reduce 10 (src line 104)


state 13
	decl:  struct_decl.    (11)

	.  reduce 11 (src line 105)


state 14
	decl:  interface_decl.    (12)

	.  reduce 12 (src line 106)


state 15
	decl:  impl_decl.    (13)

	.  reduce 13 (src line 107)


state 16
	decl:  func_decl.    (14)

	.  reduce 14 (src line 108)


state 17
	decl:  let_decl.    (15)

	.  reduce 15 (src line 109)


state 18
	decl:  var_decl.    (16)

	.  reduce 16 (src line 110)


state 19
	import_decl:  IMPORT.IDENT STRING 
	import_decl:  IMPORT.STRING 

	IDENT  shift 27
	STRING  shift 28
	.  error


state 20
	enum_decl:  ENUM.qualified_name opt_type_params $$19 enum_body opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 29

state 21
	struct_decl:  STRUCT.qualified_name opt_type_params $$28 struct_body opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 31

state 22
	interface_decl:  INTERFACE.qualified_name opt_type_params $$37 func_sig_list opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 32

state 23
	impl_decl:  IMPL.opt_impl_type_params type $$42 COLON type $$43 impl_body opt_newlines END 
	opt_impl_type_params: .    (45)

	LBRACK  shift 34
	.  reduce 45 (src line 363)

	opt_impl_type_params  goto 33

state 24
	func_decl:  FUNC.IDENT opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_where_clause opt_newlines block_expr opt_newlines END 

	IDENT  shift 35
	.  error


state 25
	let_decl:  LET.IDENT opt_type_annot '=' expr 

	IDENT  shift 36
	.  error


state 26
	var_decl:  VAR.IDENT opt_type_annot '=' expr 

	IDENT  shift 37
	.  error


state 27
	import_decl:  IMPORT IDENT.STRING 

	STRING  shift 38
	.  error


state 28
	import_decl:  IMPORT STRING.    (18)

	.  reduce 18 (src line 123)


state 29
	enum_decl:  ENUM qualified_name.opt_type_params $$19 enum_body opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	opt_type_params: .    (63)

	DOT  shift 40
	LBRACK  shift 41
	.  reduce 63 (src line 479)

	opt_type_params  goto 39

state 30
	qualified_name:  IDENT.    (79)

	.  reduce 79 (src line 560)


state 31
	struct_decl:  STRUCT qualified_name.opt_type_params $$28 struct_body opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	opt_type_params: .    (63)

	DOT  shift 40
	LBRACK  shift 41
	.  reduce 63 (src line 479)

	opt_type_params  goto 42

state 32
	interface_decl:  INTERFACE qualified_name.opt_type_params $$37 func_sig_list opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	opt_type_params: .    (63)

	DOT  shift 40
	LBRACK  shift 41
	.  reduce 63 (src line 479)

	opt_type_params  goto 43

state 33
	impl_decl:  IMPL opt_impl_type_params.type $$42 COLON type $$43 impl_body opt_newlines END 

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  error

	qualified_name  goto 50
	type  goto 44
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 34
	opt_impl_type_params:  LBRACK.$$46 maybe_name_list RBRACK 
	$$46: .    (46)

	.  reduce 46 (src line 365)

	$$46  goto 51

state 35
	func_decl:  FUNC IDENT.opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_where_clause opt_newlines block_expr opt_newlines END 
	opt_type_params: .    (63)

	LBRACK  shift 41
	.  reduce 63 (src line 479)

	opt_type_params  goto 52

state 36
	let_decl:  LET IDENT.opt_type_annot '=' expr 
	opt_type_annot: .    (53)

	COLON  shift 54
	.  reduce 53 (src line 440)

	opt_type_annot  goto 53

state 37
	var_decl:  VAR IDENT.opt_type_annot '=' expr 
	opt_type_annot: .    (53)

	COLON  shift 54
	.  reduce 53 (src line 440)

	opt_type_annot  goto 55

state 38
	import_decl:  IMPORT IDENT STRING.    (17)

	.  reduce 17 (src line 113)


state 39
	enum_decl:  ENUM qualified_name opt_type_params.$$19 enum_body opt_newlines END 
	$$19: .    (19)

	.  reduce 19 (src line 133)

	$$19  goto 56

state 40
	qualified_name:  qualified_name DOT.IDENT 

	IDENT  shift 57
	.  error


state 41
	opt_type_params:  LBRACK.$$64 maybe_name_list RBRACK 
	$$64: .    (64)

	.  reduce 64 (src line 481)

	$$64  goto 58

state 42
	struct_decl:  STRUCT qualified_name opt_type_params.$$28 struct_body opt_newlines END 
	$$28: .    (28)

	.  reduce 28 (src line 207)

	$$28  goto 59

state 43
	interface_decl:  INTERFACE qualified_name opt_type_params.$$37 func_sig_list opt_newlines END 
	$$37: .    (37)

	.  reduce 37 (src line 281)

	$$37  goto 60

state 44
	impl_decl:  IMPL opt_impl_type_params type.$$42 COLON type $$43 impl_body opt_newlines END 
	$$42: .    (42)

	.  reduce 42 (src line 326)

	$$42  goto 61

state 45
	type:  func_type.    (81)

	.  reduce 81 (src line 575)


state 46
	type:  grouped_type.    (82)

	.  reduce 82 (src line 577)


state 47
	type:  named_type.    (83)

	.  reduce 83 (src line 578)


state 48
	func_type:  FUNC.LPAREN maybe_type_list RPAREN ARROW type 

	LPAREN  shift 62
	.  error


state 49
	grouped_type:  LPAREN.type RPAREN 

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  error

	qualified_name  goto 50
	type  goto 63
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 50
	qualified_name:  qualified_name.DOT IDENT 
	named_type:  qualified_name.named_type_suffix 
	named_type_suffix: .    (87)

	DOT  shift 40
	TYPELBRACK  shift 65
	.  reduce 87 (src line 601)

	named_type_suffix  goto 64

state 51
	opt_impl_type_params:  LBRACK $$46.maybe_name_list RBRACK 
	maybe_name_list: .    (66)

	IDENT  shift 68
	.  reduce 66 (src line 488)

	maybe_name_list  goto 66
	name_list  goto 67

state 52
	func_decl:  FUNC IDENT opt_type_params.LPAREN maybe_param_list RPAREN ARROW type opt_where_clause opt_newlines block_expr opt_newlines END 

	LPAREN  shift 69
	.  error


state 53
	let_decl:  LET IDENT opt_type_annot.'=' expr 

	'='  shift 70
	.  error


state 54
	opt_type_annot:  COLON.type 

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  error

	qualified_name  goto 50
	type  goto 71
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 55
	var_decl:  VAR IDENT opt_type_annot.'=' expr 

	'='  shift 72
	.  error


state 56
	enum_decl:  ENUM qualified_name opt_type_params $$19.enum_body opt_newlines END 
	enum_body: .    (21)

	.  reduce 21 (src line 153)

	enum_body  goto 73

state 57
	qualified_name:  qualified_name DOT IDENT.    (80)

	.  reduce 80 (src line 568)


state 58
	opt_type_params:  LBRACK $$64.maybe_name_list RBRACK 
	maybe_name_list: .    (66)

	IDENT  shift 68
	.  reduce 66 (src line 488)

	maybe_name_list  goto 74
	name_list  goto 67

state 59
	struct_decl:  STRUCT qualified_name opt_type_params $$28.struct_body opt_newlines END 
	struct_fields: .    (33)

	LPAREN  shift 76
	.  reduce 33 (src line 251)

	struct_body  goto 75
	struct_fields  goto 77

state 60
	interface_decl:  INTERFACE qualified_name opt_type_params $$37.func_sig_list opt_newlines END 
	func_sig_list: .    (39)

	.  reduce 39 (src line 301)

	func_sig_list  goto 78

state 61
	impl_decl:  IMPL opt_impl_type_params type $$42.COLON type $$43 impl_body opt_newlines END 

	COLON  shift 79
	.  error


state 62
	func_type:  FUNC LPAREN.maybe_type_list RPAREN ARROW type 
	maybe_type_list: .    (75)

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  reduce 75 (src line 534)

	qualified_name  goto 50
	type  goto 82
	maybe_type_list  goto 80
	type_list  goto 81
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 63
	grouped_type:  LPAREN type.RPAREN 

	RPAREN  shift 83
	.  error


state 64
	named_type:  qualified_name named_type_suffix.    (86)

	.  reduce 86 (src line 597)


state 65
	named_type_suffix:  TYPELBRACK.maybe_type_list RBRACK 
	maybe_type_list: .    (75)

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  reduce 75 (src line 534)

	qualified_name  goto 50
	type  goto 82
	maybe_type_list  goto 84
	type_list  goto 81
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 66
	opt_impl_type_params:  LBRACK $$46 maybe_name_list.RBRACK 

	RBRACK  shift 85
	.  error


state 67
	maybe_name_list:  name_list.    (67)
	name_list:  name_list.COMMA IDENT 

	COMMA  shift 86
	.  reduce 67 (src line 490)


state 68
	name_list:  IDENT.    (68)

	.  reduce 68 (src line 493)


state 69
	func_decl:  FUNC IDENT opt_type_params LPAREN.maybe_param_list RPAREN ARROW type opt_where_clause opt_newlines block_expr opt_newlines END 
	maybe_param_list: .    (70)

	IDENT  shift 90
	.  reduce 70 (src line 512)

	maybe_param_list  goto 87
	param_list  goto 88
	param  goto 89

state 70
	let_decl:  LET IDENT opt_type_annot '='.expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	expr  goto 91
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 71
	opt_type_annot:  COLON type.    (54)

	.  reduce 54 (src line 442)


state 72
	var_decl:  VAR IDENT opt_type_annot '='.expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	expr  goto 119
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 73
	enum_decl:  ENUM qualified_name opt_type_params $$19 enum_body.opt_newlines END 
	enum_body:  enum_body.opt_newlines enum_variant 
	opt_newlines: .    (5)

	.  reduce 5 (src line 92)

	opt_newlines  goto 120

state 74
	opt_type_params:  LBRACK $$64 maybe_name_list.RBRACK 

	RBRACK  shift 121
	.  error


state 75
	struct_decl:  STRUCT qualified_name opt_type_params $$28 struct_body.opt_newlines END 
	opt_newlines: .    (5)

	.  reduce 5 (src line 92)

	opt_newlines  goto 122

state 76
	struct_body:  LPAREN.$$30 maybe_type_list RPAREN 
	$$30: .    (30)

	.  reduce 30 (src line 227)

	$$30  goto 123

 77: reduce/reduce conflict  (red'ns 32 and 5) on NEWLINE
state 77
	struct_body:  struct_fields.    (32)
	struct_fields:  struct_fields.opt_newlines field 
	opt_newlines: .    (5)

	END  reduce 32 (src line 248)
	.  reduce 5 (src line 92)

	opt_newlines  goto 124

state 78
	interface_decl:  INTERFACE qualified_name opt_type_params $$37 func_sig_list.opt_newlines END 
	func_sig_list:  func_sig_list.opt_newlines func_sig 
	opt_newlines: .    (5)

	.  reduce 5 (src line 92)

	opt_newlines  goto 125

state 79
	impl_decl:  IMPL opt_impl_type_params type $$42 COLON.type $$43 impl_body opt_newlines END 

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  error

	qualified_name  goto 50
	type  goto 126
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 80
	func_type:  FUNC LPAREN maybe_type_list.RPAREN ARROW type 

	RPAREN  shift 127
	.  error


state 81
	maybe_type_list:  type_list.    (76)
	type_list:  type_list.COMMA type 

	COMMA  shift 128
	.  reduce 76 (src line 536)


state 82
	type_list:  type.    (77)

	.  reduce 77 (src line 539)


state 83
	grouped_type:  LPAREN type RPAREN.    (85)

	.  reduce 85 (src line 593)


state 84
	named_type_suffix:  TYPELBRACK maybe_type_list.RBRACK 

	RBRACK  shift 129
	.  error


state 85
	opt_impl_type_params:  LBRACK $$46 maybe_name_list RBRACK.    (47)

	.  reduce 47 (src line 370)


state 86
	name_list:  name_list COMMA.IDENT 

	IDENT  shift 130
	.  error


state 87
	func_decl:  FUNC IDENT opt_type_params LPAREN maybe_param_list.RPAREN ARROW type opt_where_clause opt_newlines block_expr opt_newlines END 

	RPAREN  shift 131
	.  error


state 88
	maybe_param_list:  param_list.    (71)
	param_list:  param_list.COMMA param 

	COMMA  shift 132
	.  reduce 71 (src line 514)


state 89
	param_list:  param.    (72)

	.  reduce 72 (src line 517)


state 90
	param:  IDENT.COLON type 

	COLON  shift 133
	.  error


state 91
	let_decl:  LET IDENT opt_type_annot '=' expr.    (51)

	.  reduce 51 (src line 413)


92: shift/reduce conflict (shift 134(1), red'n 89(0)) on PIPEFWD
92: shift/reduce conflict (shift 135(1), red'n 89(0)) on PIPEBACK
state 92
	expr:  pipe_expr.    (89)
	pipe_expr:  pipe_expr.PIPEFWD or_expr 
	pipe_expr:  pipe_expr.PIPEBACK or_expr 

	PIPEFWD  shift 134
	PIPEBACK  shift 135
	.  reduce 89 (src line 620)


93: shift/reduce conflict (shift 136(2), red'n 90(0)) on OROR
state 93
	pipe_expr:  or_expr.    (90)
	or_expr:  or_expr.OROR and_expr 

	OROR  shift 136
	.  reduce 90 (src line 624)


94: shift/reduce conflict (shift 137(3), red'n 93(0)) on ANDAND
state 94
	or_expr:  and_expr.    (93)
	and_expr:  and_expr.ANDAND compare_expr 

	ANDAND  shift 137
	.  reduce 93 (src line 642)


95: shift/reduce conflict (shift 138(4), red'n 95(0)) on EQEQ
95: shift/reduce conflict (shift 139(4), red'n 95(0)) on NEQ
95: shift/reduce conflict (shift 140(4), red'n 95(0)) on LTE
95: shift/reduce conflict (shift 141(4), red'n 95(0)) on GTE
95: shift/reduce conflict (shift 142(4), red'n 95(0)) on '<'
95: shift/reduce conflict (shift 143(4), red'n 95(0)) on '>'
state 95
	and_expr:  compare_expr.    (95)
	compare_expr:  compare_expr.EQEQ add_expr 
	compare_expr:  compare_expr.NEQ add_expr 
	compare_expr:  compare_expr.LTE add_expr 
	compare_expr:  compare_expr.GTE add_expr 
	compare_expr:  compare_expr.'<' add_expr 
	compare_expr:  compare_expr.'>' add_expr 

	EQEQ  shift 138
	NEQ  shift 139
	LTE  shift 140
	GTE  shift 141
	'<'  shift 142
	'>'  shift 143
	.  reduce 95 (src line 654)


96: shift/reduce conflict (shift 144(5), red'n 97(0)) on '+'
96: shift/reduce conflict (shift 145(5), red'n 97(0)) on '-'
state 96
	compare_expr:  add_expr.    (97)
	add_expr:  add_expr.'+' mul_expr 
	add_expr:  add_expr.'-' mul_expr 

	'+'  shift 144
	'-'  shift 145
	.  reduce 97 (src line 666)


97: shift/reduce conflict (shift 146(6), red'n 104(0)) on '*'
97: shift/reduce conflict (shift 147(6), red'n 104(0)) on '/'
state 97
	add_expr:  mul_expr.    (104)
	mul_expr:  mul_expr.'*' prefix_expr 
	mul_expr:  mul_expr.'/' prefix_expr 

	'*'  shift 146
	'/'  shift 147
	.  reduce 104 (src line 703)


state 98
	mul_expr:  prefix_expr.    (107)

	.  reduce 107 (src line 720)


99: shift/reduce conflict (shift 149(0), red'n 110(8)) on DOT
99: shift/reduce conflict (shift 148(0), red'n 110(8)) on LPAREN
99: shift/reduce conflict (shift 151(0), red'n 110(8)) on LBRACE
99: shift/reduce conflict (shift 150(0), red'n 110(8)) on TYPELBRACK
state 99
	prefix_expr:  postfix_expr.    (110)
	postfix_expr:  postfix_expr.LPAREN maybe_expr_list RPAREN 
	postfix_expr:  postfix_expr.DOT IDENT 
	postfix_expr:  postfix_expr.TYPELBRACK maybe_type_list RBRACK LBRACE maybe_struct_fields RBRACE 
	postfix_expr:  postfix_expr.LBRACE maybe_struct_fields RBRACE 

	DOT  shift 149
	LPAREN  shift 148
	LBRACE  shift 151
	TYPELBRACK  shift 150
	.  reduce 110 (src line 737)


state 100
	prefix_expr:  NOT.postfix_expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	postfix_expr  goto 152
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 101
	postfix_expr:  primary.    (112)

	.  reduce 112 (src line 745)


state 102
	primary:  IDENT.    (117)

	.  reduce 117 (src line 775)


state 103
	primary:  NUMBER.    (118)

	.  reduce 118 (src line 780)


state 104
	primary:  STRING.    (119)

	.  reduce 119 (src line 784)


state 105
	primary:  LPAREN.expr RPAREN 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	expr  goto 153
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 106
	primary:  slice_lit.    (121)

	.  reduce 121 (src line 789)


state 107
	primary:  collection_lit.    (122)

	.  reduce 122 (src line 790)


state 108
	primary:  if_expr.    (123)

	.  reduce 123 (src line 791)


state 109
	primary:  switch_expr.    (124)

	.  reduce 124 (src line 792)


state 110
	primary:  while_expr.    (125)

	.  reduce 125 (src line 793)


state 111
	primary:  func_lit.    (126)

	.  reduce 126 (src line 794)


state 112
	slice_lit:  SLICE.    (127)

	.  reduce 127 (src line 797)


state 113
	slice_lit:  LBRACK.maybe_expr_list RBRACK 
	maybe_expr_list: .    (129)

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  reduce 129 (src line 810)

	expr  goto 156
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	maybe_expr_list  goto 154
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111
	expr_list  goto 155

state 114
	collection_lit:  LBRACE.maybe_collection_entries RBRACE 
	maybe_collection_entries: .    (140)

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  reduce 140 (src line 872)

	expr  goto 160
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111
	maybe_collection_entries  goto 157
	collection_entries  goto 158
	collection_entry  goto 159

state 115
	if_expr:  IF.expr $$147 THEN expr $$148 ELSE expr 
	if_expr:  IF.expr NEWLINE $$150 block_expr $$151 ELSE block_expr opt_newlines END 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	expr  goto 161
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 116
	switch_expr:  SWITCH.expr $$155 switch_case_list opt_newlines END 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	expr  goto 162
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 117
	while_expr:  WHILE.expr $$153 block_expr opt_newlines END 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	expr  goto 163
	pipe_expr  goto 92
	or_expr  goto 93
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 118
	func_lit:  FUNC.LPAREN maybe_param_list RPAREN ARROW type opt_newlines block_expr opt_newlines END 

	LPAREN  shift 164
	.  error


state 119
	var_decl:  VAR IDENT opt_type_annot '=' expr.    (52)

	.  reduce 52 (src line 426)


state 120
	opt_newlines:  opt_newlines.NEWLINE 
	enum_decl:  ENUM qualified_name opt_type_params $$19 enum_body opt_newlines.END 
	enum_body:  enum_body opt_newlines.enum_variant 

	IDENT  shift 167
	END  shift 165
	NEWLINE  shift 8
	.  error

	enum_variant  goto 166

state 121
	opt_type_params:  LBRACK $$64 maybe_name_list RBRACK.    (65)

	.  reduce 65 (src line 485)


state 122
	opt_newlines:  opt_newlines.NEWLINE 
	struct_decl:  STRUCT qualified_name opt_type_params $$28 struct_body opt_newlines.END 

	END  shift 168
	NEWLINE  shift 8
	.  error


state 123
	struct_body:  LPAREN $$30.maybe_type_list RPAREN 
	maybe_type_list: .    (75)

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  reduce 75 (src line 534)

	qualified_name  goto 50
	type  goto 82
	maybe_type_list  goto 169
	type_list  goto 81
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 124
	opt_newlines:  opt_newlines.NEWLINE 
	struct_fields:  struct_fields opt_newlines.field 

	IDENT  shift 171
	EMBED  shift 172
	NEWLINE  shift 8
	.  error

	field  goto 170

state 125
	opt_newlines:  opt_newlines.NEWLINE 
	interface_decl:  INTERFACE qualified_name opt_type_params $$37 func_sig_list opt_newlines.END 
	func_sig_list:  func_sig_list opt_newlines.func_sig 

	FUNC  shift 175
	END  shift 173
	NEWLINE  shift 8
	.  error

	func_sig  goto 174

state 126
	impl_decl:  IMPL opt_impl_type_params type $$42 COLON type.$$43 impl_body opt_newlines END 
	$$43: .    (43)

	.  reduce 43 (src line 331)

	$$43  goto 176

state 127
	func_type:  FUNC LPAREN maybe_type_list RPAREN.ARROW type 

	ARROW  shift 177
	.  error


state 128
	type_list:  type_list COMMA.type 

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  error

	qualified_name  goto 50
	type  goto 178
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 129
	named_type_suffix:  TYPELBRACK maybe_type_list RBRACK.    (88)

	.  reduce 88 (src line 610)


state 130
	name_list:  name_list COMMA IDENT.    (69)

	.  reduce 69 (src line 502)


state 131
	func_decl:  FUNC IDENT opt_type_params LPAREN maybe_param_list RPAREN.ARROW type opt_where_clause opt_newlines block_expr opt_newlines END 

	ARROW  shift 179
	.  error


state 132
	param_list:  param_list COMMA.param 

	IDENT  shift 90
	.  error

	param  goto 180

state 133
	param:  IDENT COLON.type 

	IDENT  shift 30
	FUNC  shift 48
	LPAREN  shift 49
	.  error

	qualified_name  goto 50
	type  goto 181
	func_type  goto 45
	grouped_type  goto 46
	named_type  goto 47

state 134
	pipe_expr:  pipe_expr PIPEFWD.or_expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	or_expr  goto 182
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 135
	pipe_expr:  pipe_expr PIPEBACK.or_expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	or_expr  goto 183
	and_expr  goto 94
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 136
	or_expr:  or_expr OROR.and_expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error

	and_expr  goto 184
	compare_expr  goto 95
	add_expr  goto 96
	mul_expr  goto 97
	prefix_expr  goto 98
	postfix_expr  goto 99
	primary  goto 101
	slice_lit  goto 106
	collection_lit  goto 107
	if_expr  goto 108
	switch_expr  goto 109
	while_expr  goto 110
	func_lit  goto 111

state 137
	and_expr:  and_expr ANDAND.compare_expr 

	IDENT  shift 102
	NUMBER  shift 103
	STRING  shift 104
	FUNC  shift 118
	IF  shift 115
	SWITCH  shift 116
	NOT  shift 100
	WHILE  shift 117
	LPAREN  shift 105
	LBRACK  shift 113
	LBRACE  shift 114
	SLICE  shift 112
	.  error
